# another-nas

./: .gitmodules  CMakeLists.txt  LICENSE
another-nas/: CMakeLists.txt
another-nas/src/: main.c
http_parser/: CMakeLists.txt
http_parser/inc/: http_parser.h  http_request.h  http_response.h  http_response_codes.h
http_server/: CMakeLists.txt
http_server/inc/: http_server.h
http_server/src/: http_server.c
scripts/: build.sh
utils/: CMakeLists.txt
utils/src/: list.c
